# cli-screen-recorder

./: Cargo.toml  README.md
src/: main.rs  test.rs
