[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.3", features = ["derive"] }
crabgrab = { version = "0.4.0", features = ["bitmap", "screenshot"] }
ffmpeg-next = "7.1.0"
image = "0.25.5"
png = "0.17.14"
tokio = { version = "1.41.1", features = ["full"] }
